[gd_scene load_steps=7 format=3 uid="uid://cxr21u3q8d5bx"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_0qofw"]
[ext_resource type="Texture2D" uid="uid://pnk1b0xkqb2u" path="res://resources/enemies/Джунгли/Криса Враг 3/1.png" id="1_4iaax"]
[ext_resource type="Texture2D" uid="uid://bitksjteuhy2o" path="res://resources/enemies/Джунгли/Криса Враг 3/2.png" id="2_etpq2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ncmnt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_4iaax")
}, {
"duration": 1.0,
"texture": ExtResource("2_etpq2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_14h38"]
radius = 30.0
height = 110.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jl6kc"]
size = Vector2(878.5, 530)

[node name="RigidBody2D" type="RigidBody2D" groups=["enemy"]]
gravity_scale = 0.005
lock_rotation = true
script = ExtResource("1_0qofw")
start_y = null
end_x = null

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(24, 87)
scale = Vector2(0.822666, 0.822666)
sprite_frames = SubResource("SpriteFrames_ncmnt")
autoplay = "default"
frame_progress = 0.371045

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(35, 52)
shape = SubResource("CapsuleShape2D_14h38")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(37, 60)
scale = Vector2(15, 1)
hit_from_inside = true

[node name="RayCast2D1" type="RayCast2D" parent="."]
position = Vector2(37, 60)
rotation = 0.785398
scale = Vector2(15, 1)
hit_from_inside = true

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2(37, 60)
rotation = -0.785398
scale = Vector2(15, 1)
hit_from_inside = true

[node name="TimerJump" type="Timer" parent="."]

[node name="TimerMove" type="Timer" parent="."]

[node name="FindPlr" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FindPlr"]
position = Vector2(38, 36)
shape = SubResource("RectangleShape2D_jl6kc")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimerJump" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerMove" to="." method="_on_timer_move_timeout"]
[connection signal="body_entered" from="FindPlr" to="." method="_on_find_plr_body_entered"]
[connection signal="body_exited" from="FindPlr" to="." method="_on_find_plr_body_exited"]
